<resources>
    <string name="app_name">CinemaPlus</string>
    <string name="title_activity_detail_cinema">Map</string>


    <string name="cinema">Cinema</string>
    <string name="movieNowShow">Now Showing</string>
    <string name="movieComingSoon">Coming Soon</string>
    <string name="movie">Movie</string>
    <string name="profile">Profile</string>
    <string name="min">min</string>
    <string name="openDay">Open day:</string>
    <string name="popCorn">PopCorn</string>
    <string name="screen">Screen</string>
    <string name="ticker">Ticker</string>
    <string name="favourite">Favourite</string>
    <string name="selectSeat">Select seat</string>
    <string name="payment">Payment</string>
    <string name="detailMovie">Detail movie</string>
    <string name="detailCinema">Detail cinema</string>
    <string name="schedule">Schedule</string>
    <string name="emptySeat">Empty</string>
    <string name="bookingSeat">Booking</string>
    <string name="selectSeatBooking">Selected</string>
    <string name="duration">Duration:</string>
    <string name="descriptopn">Description</string>
    <string name="type">Movie type: </string>
    <string name="bookingTicker">Ticker Booking</string>
    <string name="backTo">Back to</string>
    <string name="showInCinema">Showing in cinemas</string>

    <string name="selectCinema">Select Cinema</string>
    <string name="dateBooking">Booking date</string>
    <string name="selectShowTime">Select show time</string>
    <string name="noShowTimeOfMovie">No show time of Movie</string>
    <string name="suggestCinema">Suggest cinema</string>
    <string name="continues">Continue</string>
    <string name="noUsingPopcorn">You no using popcorn</string>
    <string name="totalAmountPopcorn">Total amount popcorn: </string>
    <string name="numberSeatBooking">Number seat booking : </string>
    <string name="methodPayment">Payment method: </string>
    <string name="totalAmountGerneral">Payment amount:</string>
    <string name="paymentDuration">Duration payment: </string>
    <string name="contentPayment">Content Payment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="changePassWord">Chang Password</string>
    <string name="myProfile">My Information</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="languageVN">Vietnamese</string>
    <string name="languageAmerica">English</string>
    <string name="logout">Logout</string>
    <string name="detailTicker">Detail ticker</string>

    <string name="dateTime">Date &amp; time</string>
    <string name="seatAndRow">Seat and row</string>
    <string name="cinemAddress">Cinema Address</string>
    <string name="cancelTicker">Cancel ticker</string>
    <string name="scanQR">Scan the QR code at the cinema entrance</string>
    <string name="codeTicker">Booking Id: </string>
    <string name="priceTicker">Price</string>
    <string name="direct">Direct</string>
    <string name="movieOfCinema">Movie of cinema</string>
    <string name="movieNotBooking">No booking</string>
    <string name="youLogout">you are logged out</string>
    <string name="nologged">Not logged in</string>
    <string name="seat">Seat</string>
    <string name="noSchedule">No schedule</string>
    <string name="cancelLogin">Cancel login</string>
    <string name="enterYourAccount">Enter your Account</string>
    <string name="enterYourPassWord">Enter your Password</string>
    <string name="enterYourName">Enter your name</string>
    <string name="endterYourEmail">Enter your email</string>
    <string name="enterYourBirthday">Enter your birthday</string>
    <string name="enterYourNumberPhone">Enter your number phone</string>
    <string name="enterPassConfirm">Retype your password</string>
    <string name="creatAccount">Creat account</string>
    <string name="cancelRegister">Cancel register</string>
    <string name="verifyAccount">Verifycation Account</string>
    <string name="verifyCodeOTP">Verification codes</string>
    <string name="enterOTP">Enter your OTP</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="errorEmptyAccount">Account not empty</string>
    <string name="errorPassEmpty">Password not empty</string>
    <string name="errorNameEmpty">Name not empty</string>
    <string name="errorNumberPhoneEmpty">Number phone not empty</string>
    <string name="errorPassCofirmEmpty">Password confirm not empty</string>
    <string name="errorEmailEmpty">Email not empty</string>
    <string name="errorInvalidEmail">Email not invalid</string>
    <string name="errorInvalidNumberPhone">Number phone not invalid</string>
    <string name="processing">Processing...</string>
    <string name="noLogin">You are not logged in</string>
    <string name="notBookingMovie">Movies that have not been shown come back later</string>
    <string name="processSuccess">Processed success</string>
    <string name="processFail">Process fail</string>
    <string name="enterComment">Enter your comment...</string>
    <string name="comment">Comment</string>
    <string name="noEnableGeo">You have not enabled geolocation</string>
    <string name="notCinemaNearYou">No cinema near you</string>
    <string name="cinemaNearYou">Cinema near me</string>
    <string name="noTicker">You have not booked your ticket yet</string>
    <string name="yourTicker">Your ticker</string>
    <string name="movieFavourite">Movie favourite</string>
    <string name="bookingNow">Booking now</string>
    <string name="searchMovie">Search movie</string>
    <string name="today">Today</string>
    <string name="room">Room</string>
    <string name="infoSeatBooked">Seats already booked</string>
    <string name="commentEmpty">Comment is empty</string>
    <string name="newMovie">New Movie</string>
    <string name="invailBirthday">Invalid birthday</string>
    <string name="updateInfoCustomer">Update Information</string>
    <string name="informationCustomer">Information customer</string>
    <string name="bookingSuccess">Booking success</string>
    <string name="bookingFail">Booking Fail</string>
    <string name="inforBookingInvaild">Information booking invalid</string>
</resources>
