<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemmovie"
        android:checked="true"
        android:icon="@drawable/movie"
        android:title="@string/movie"></item>
    <item
        android:id="@+id/itemticker"
        android:icon="@drawable/ticker"
        android:iconTint="@color/colorUnSelect"
        android:title="@string/ticker"></item>
    <item
        android:id="@+id/itemcinema"
        android:icon="@drawable/cinema"
        android:iconTint="@color/colorUnSelect"
        android:title="@string/cinema"></item>
    <item
        android:id="@+id/itemfavourite"
        android:iconTint="@color/colorUnSelect"
        android:icon="@drawable/favourite"
        android:title="@string/favourite"></item>
    <item
        android:id="@+id/itemprofile"
        android:icon="@drawable/profile"
        android:iconTint="@color/colorUnSelect"
        android:title="@string/profile"></item>

</menu>