<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edlayouttk"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColorHint="#707070"
            app:errorTextAppearance="@style/errorMessageInput"
            app:hintEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txttendangnhap"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/background_textviewaccountandpass"
                android:hint="@string/enterYourAccount"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="#E7E7E7"
                android:textColorHint="#707070" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edlayoupass"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColorHint="#707070"
            app:errorTextAppearance="@style/errorMessageInput"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtmatkhau"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/background_textviewaccountandpass"
                android:hint="@string/enterYourPassWord"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="#E7E7E7"
                android:textColorHint="#707070" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnhuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:background="@drawable/background_btnbackto"
            android:text="@string/cancelLogin"
            android:textAllCaps="false"
            android:textColor="#E7E7E7"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:background="@drawable/background_btnlogin"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#E7E7E7"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New at CinemaPlus? "
                android:textColor="#707070"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txttaotk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tạo tài khoản"
                android:textColor="#FF3365"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>