<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorBackround"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:weightSum="10">

                <TextView
                    android:id="@+id/txtTenPhim"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4.5"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingTop="5dp"
                    android:text="Tên phim"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateBooking"
                        android:textColor="#6D6D80"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtNgayDatVaThoiGian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="14/10/2020"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:scaleType="center"
                android:src="@drawable/devider_dung" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.2"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    
                    <TextView
                        android:id="@+id/txttoday"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/background_ticker_today"
                        android:gravity="center_horizontal"
                        android:text="@string/today"
                        android:textColor="#E7E7E7"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/room"
                                android:textColor="#6D6D80"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/txtTenPhong"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="Phòng"
                                android:textColor="#FFFFFF"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Dãy"
                                android:textColor="#6D6D80"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/txtday"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="Dãy "
                                android:textColor="#FFFFFF"
                                android:textSize="15sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3.3"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seat"
                                android:textColor="#6D6D80"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/txtghe"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal"
                                android:text="Ghế"
                                android:textColor="#FFFFFF"
                                android:textSize="13sp" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="@string/cinema"
                            android:textColor="#6D6D80"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txtTenrap"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:paddingLeft="15dp"
                            android:text="Tên rạp"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>